{
    "name": "InputSystem",
    "maps": [
        {
            "name": "WASD",
            "id": "43987355-9621-4617-b771-164cf1c6bdf3",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c40e9836-915b-455e-8e81-b5d1b9e14f1a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightMove",
                    "type": "Button",
                    "id": "b6d6002d-03d0-4f02-a4ea-0b04df44d029",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMove",
                    "type": "Button",
                    "id": "66855e3e-7959-4c5d-b16a-75dc10edce0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slide",
                    "type": "Button",
                    "id": "facc9d2b-3b45-439d-add7-f9827fbbdd39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "99850373-089d-4dc0-b1ad-d3084eea4687",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b15554b-ff46-4c94-a135-9887882def76",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6438c60c-862e-400b-aa40-24c8909d09cf",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd28a12e-51e5-4344-8a87-8fc7281bf60b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Arrows",
            "id": "18018c71-ed79-48ad-bc98-8f6a8fcece15",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "affdb410-1f67-41c7-90a9-40fe848340f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightMove",
                    "type": "Button",
                    "id": "54b9e112-d676-402b-9718-bc93dae5dc4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMove",
                    "type": "Button",
                    "id": "861eb6ff-b5b0-438d-9955-cdfe188a18ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slide",
                    "type": "Button",
                    "id": "23134632-093c-4e23-8efa-b7f29022a8ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3bf94cde-b2d6-40a1-bf32-cf40ca26c8d1",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2d12dd7-26ed-4720-b572-050550d11b70",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e19c56c-1203-4258-8b57-94fc3f9a0b46",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "737e97e5-deeb-4391-aba4-917cf0fccb97",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}